--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -56,19 +57,18 @@ jobs:
       run: |
         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Current Version: $VERSION"
-        echo "::set-output name=version::$VERSION"
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Increment Version
       id: increment_version
       run: |
-        CURRENT_VERSION=${{ steps.get_version.outputs.version }}
-        IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
+        IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
         PATCH=${VERSION_PARTS[2]}
         NEW_PATCH=$((PATCH + 1))
         NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH"
         echo "New Version: $NEW_VERSION"
         mvn versions:set -DnewVersion=$NEW_VERSION
-        echo "::set-output name=new_version::$NEW_VERSION"
+        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -78,8 +78,13 @@ jobs:
         git config --global user.name 'github-actions'
         git config --global user.email 'actions@github.com'
         git add pom.xml
-        git commit -m "Incremented version to ${{ steps.increment_version.outputs.new_version }}"
+        git commit -m "Incremented version to ${{ env.NEW_VERSION }}"
         git push
+
+    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    # - name: Update dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
 
 #     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
 #     # - name: Update dependency graph
