--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,27 +38,20 @@ jobs:
         echo "Current Version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Increment Version
-      id: increment_version
-      run: |
-        IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
-        PATCH=${VERSION_PARTS[2]}
-        NEW_PATCH=$((PATCH + 1))
-        NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH"
-        echo "New Version: $NEW_VERSION"
-        mvn versions:set -DnewVersion=$NEW_VERSION
-        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+    # - name: Increment Version
+    #   id: increment_version
+    #   run: |
+    #     IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
+    #     PATCH=${VERSION_PARTS[2]}
+    #     NEW_PATCH=$((PATCH + 1))
+    #     NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH"
+    #     echo "New Version: $NEW_VERSION"
+    #     mvn versions:set -DnewVersion=$NEW_VERSION
+    #     echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Commit Version Change
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'actions@github.com'
-        git add pom.xml
-        git commit -m "Incremented version to ${{ env.NEW_VERSION }}"
-        git push
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
