--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,17 +37,11 @@ jobs:
         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Current Version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
-        MAJOR_VER=$(echo "$VERSION" | awk '{print $1}'
-    # - name: Increment Version
-    #   id: increment_version
-    #   run: |
-    #     IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
-    #     PATCH=${VERSION_PARTS[2]}
-    #     NEW_PATCH=$((PATCH + 1))
-    #     NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH"
-    #     echo "New Version: $NEW_VERSION"
-    #     mvn versions:set -DnewVersion=$NEW_VERSION
-    #     echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+        IFS='.' read -r -a VERSION_PARTS <<< "${CURRENT_VERSION}"
+        MAJOR=${VERSION_PARTS[0]}
+        MINOR=${VERSION_PARTS[1]}
+        PATCH=${VERSION_PARTS[2]}
+    
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
