--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,11 @@ jobs:
         MAJOR=${VERSION_PARTS[0]}
         MINOR=${VERSION_PARTS[1]}
         PATCH=${VERSION_PARTS[2]}
+        NEW_PATCH=$((PATCH + 1))
+        NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+        mvn versions:set -DnewVersion=${NEW_VERSION}
+        IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo "Current Version: $IVERSION"
     
 
     - name: Build with Maven
