--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,7 @@ jobs:
         IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
         MAJOR=${VERSION_PARTS[0]}
         MINOR=${VERSION_PARTS[1]}
-        PATCH=${VERSION_PARTS[2]}
+        PATCH=${VERSION_PARTS[2]:-0}
         NEW_PATCH=$((PATCH + 1))
         NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
         mvn versions:set -DnewVersion=${NEW_VERSION}
