--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
         MAJOR=${VERSION_PARTS[0]}
         MINOR=${VERSION_PARTS[1]}
         PATCH=${VERSION_PARTS[2]}
-        if [[ $PATCH == "-SNAPSHOT" ]]; then
+        if [[ $PATCH == *"-SNAPSHOT" ]]; then
           PATCH = 0
         fi
         NEW_PATCH=$((PATCH + 1))
