--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,55 @@
 # # separate terms of service, privacy policy, and support
 # # documentation.
 
+# name: Java CI with Maven
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v4
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
+#         cache: maven
+# #     - name: Build with Maven
+# #       run: mvn -B package --file pom.xml
+
+
+#     - name: Get Current Version
+#       id: get_version
+#       run: |
+#         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+#         echo "Current Version: $VERSION"
+#         IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
+#         BASE_VERSION=$(echo $VERSION | awk -F'-' '{print $1}')
+#         PATCH=$(echo $VERSION | awk -F'-' '{print $2}')
+
+#         echo "Base Version: $BASE_VERSION"
+#         echo "PATCH: $QUALIFIER"
+
+#         # MAJOR=${VERSION_PARTS[0]}
+#         # MINOR=${VERSION_PARTS[1]}
+#         # PATCH=${VERSION_PARTS[2]}
+#         if [[ $PATCH == *"-SNAPSHOT" ]]; then
+#           PATCH = 0
+#         fi
+#         NEW_PATCH=$((PATCH + 1))
+#         echo $NEW_PATCH
+#         NEW_VERSION="${BASE_VERSION}.${NEW_PATCH}"
+#         mvn versions:set -DnewVersion=${NEW_VERSION}
+#         IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+#         echo "Current Version: $IVERSION"
 name: Java CI with Maven
 
 on:
@@ -16,45 +65,54 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-#     - name: Build with Maven
-#       run: mvn -B package --file pom.xml
-
 
     - name: Get Current Version
       id: get_version
       run: |
-        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | tr -d '\r')
         echo "Current Version: $VERSION"
-        IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
+        
+        # Extract base version and snapshot indicator
         BASE_VERSION=$(echo $VERSION | awk -F'-' '{print $1}')
-        PATCH=$(echo $VERSION | awk -F'-' '{print $2}')
-
+        QUALIFIER=$(echo $VERSION | awk -F'-' '{print $2}')
+        
         echo "Base Version: $BASE_VERSION"
-        echo "PATCH: $QUALIFIER"
+        echo "Qualifier: $QUALIFIER"
 
-        # MAJOR=${VERSION_PARTS[0]}
-        # MINOR=${VERSION_PARTS[1]}
-        # PATCH=${VERSION_PARTS[2]}
-        if [[ $PATCH == *"-SNAPSHOT" ]]; then
-          PATCH = 0
+        # Split the base version into parts
+        IFS='.' read -r -a VERSION_PARTS <<< "${BASE_VERSION}"
+        MAJOR=${VERSION_PARTS[0]}
+        MINOR=${VERSION_PARTS[1]}
+        PATCH=${VERSION_PARTS[2]:-0}
+
+        # Increment patch version if it's a snapshot
+        if [[ $QUALIFIER == "SNAPSHOT" ]]; then
+          PATCH=$((PATCH + 1))
         fi
-        NEW_PATCH=$((PATCH + 1))
-        echo $NEW_PATCH
-        NEW_VERSION="${BASE_VERSION}.${NEW_PATCH}"
+
+        NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-SNAPSHOT"
+        echo "New Version: $NEW_VERSION"
+
         mvn versions:set -DnewVersion=${NEW_VERSION}
-        IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "Current Version: $IVERSION"
+        mvn versions:commit
+
+        IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | tr -d '\r')
+        echo "Updated Version: $IVERSION"
+    
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
     
 
     # - name: Build with Maven
