--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,55 +6,14 @@
 # # separate terms of service, privacy policy, and support
 # # documentation.
 
-# name: Java CI with Maven
+# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
 
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Set up JDK 17
-#       uses: actions/setup-java@v4
-#       with:
-#         java-version: '17'
-#         distribution: 'temurin'
-#         cache: maven
-# #     - name: Build with Maven
-# #       run: mvn -B package --file pom.xml
-
-
-#     - name: Get Current Version
-#       id: get_version
-#       run: |
-#         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-#         echo "Current Version: $VERSION"
-#         IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
-#         BASE_VERSION=$(echo $VERSION | awk -F'-' '{print $1}')
-#         PATCH=$(echo $VERSION | awk -F'-' '{print $2}')
-
-#         echo "Base Version: $BASE_VERSION"
-#         echo "PATCH: $QUALIFIER"
-
-#         # MAJOR=${VERSION_PARTS[0]}
-#         # MINOR=${VERSION_PARTS[1]}
-#         # PATCH=${VERSION_PARTS[2]}
-#         if [[ $PATCH == *"-SNAPSHOT" ]]; then
-#           PATCH = 0
-#         fi
-#         NEW_PATCH=$((PATCH + 1))
-#         echo $NEW_PATCH
-#         NEW_VERSION="${BASE_VERSION}.${NEW_PATCH}"
-#         mvn versions:set -DnewVersion=${NEW_VERSION}
-#         IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-#         echo "Current Version: $IVERSION"
 name: Java CI with Maven
 
 on:
@@ -80,43 +39,37 @@ jobs:
     - name: Get Current Version
       id: get_version
       run: |
-        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | tr -d '\r')
+        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Current Version: $VERSION"
-        
-        # Extract base version and snapshot indicator
+        IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
         BASE_VERSION=$(echo $VERSION | awk -F'-' '{print $1}')
-        QUALIFIER=$(echo $VERSION | awk -F'-' '{print $2}')
-        
+        PATCH=$(echo $VERSION | awk -F'-' '{print $2}')
+
         echo "Base Version: $BASE_VERSION"
-        echo "Qualifier: $QUALIFIER"
+        echo "PATCH: $PATCH"
 
-        # Split the base version into parts
-        IFS='.' read -r -a VERSION_PARTS <<< "${BASE_VERSION}"
-        MAJOR=${VERSION_PARTS[0]}
-        MINOR=${VERSION_PARTS[1]}
-        PATCH=${VERSION_PARTS[2]:-0}
-
-        # Increment patch version if it's a snapshot
-        if [[ $QUALIFIER == "SNAPSHOT" ]]; then
-          PATCH=$((PATCH + 1))
+        if [[ $PATCH == *"-SNAPSHOT" ]]; then
+          PATCH=0
         fi
-
-        NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-SNAPSHOT"
-        echo "New Version: $NEW_VERSION"
-
+        NEW_PATCH=$((PATCH + 1))
+        echo "New Patch Version: $NEW_PATCH"
+        NEW_VERSION="${BASE_VERSION}.${NEW_PATCH}"
         mvn versions:set -DnewVersion=${NEW_VERSION}
-        mvn versions:commit
-
-        IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | tr -d '\r')
+        IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Updated Version: $IVERSION"
-    
+
+    - name: Commit Version Change
+      if: github.ref == 'refs/heads/master'
+      run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+        git add pom.xml
+        git commit -m "Update version to $NEW_VERSION"
+        git push origin master
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    
-
-    # - name: Build with Maven
-    #   run: mvn -B package --file pom.xml
 
 
 #     # - name: Update dependency graph
