--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,18 +30,19 @@ jobs:
         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Current Version: $VERSION"
         IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
-        BASE_VERSION=$(echo $VERSION | awk -F'-' '{print $1}')
-        PATCH=$(echo $VERSION | awk -F'-' '{print $2}')
+        MAJOR=$(echo $VERSION | awk -F'.' '{print $1}')
+        MINOR=$(echo $VERSION | awk -F'.' '{print $2}')
+        PATCH=$(echo $VERSION | awk -F'.' '{print $3}')
 
         echo "Base Version: $BASE_VERSION"
         echo "PATCH: $PATCH"
 
-        if [[ $PATCH == *"-SNAPSHOT" ]]; then
-          PATCH=0
-        fi
+        if [[ $VERSION == *"-SNAPSHOT" ]]; then
+            VERSION = 1.0.0
+          fi
         NEW_PATCH=$((PATCH + 1))
         echo "New Patch Version: $NEW_PATCH"
-        NEW_VERSION="${BASE_VERSION}.${NEW_PATCH}"
+        NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
         mvn versions:set -DnewVersion=${NEW_VERSION}
         IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Updated Version: $IVERSION"
