--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,9 +60,9 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Build Docker Image
-      run: docker build -t myapp:${{ env.NEW_VERSION }} .
+      run: docker build -t myapp:${NEW_VERSION} .
     - name: Run Docker Container
-      run: docker run -d -p 8080:8080 myapp:${{ env.NEW_VERSION }}
+      run: docker run -d -p 8080:8080 myapp:${NEW_VERSION}
 
 #     # - name: Update dependency graph
 #     #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
