--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,7 +60,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Build Docker Image
-      run: docker build -t myapp:${NEW_VERSION} .
+      run: docker build -t myapp .
     - name: Run Docker Container
       run: docker run -d -p 8080:8080 myapp:${NEW_VERSION}
 
