--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,6 @@
-# # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-#
 name: Java CI with Maven
 
 on:
@@ -30,19 +29,23 @@ jobs:
         VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Current Version: $VERSION"
         IFS='.' read -r -a VERSION_PARTS <<< "${VERSION}"
-        MAJOR=$(echo $VERSION | awk -F'.' '{print $1}')
-        MINOR=$(echo $VERSION | awk -F'.' '{print $2}')
-        PATCH=$(echo $VERSION | awk -F'.' '{print $3}')
+        MAJOR=${VERSION_PARTS[0]}
+        MINOR=${VERSION_PARTS[1]}
+        PATCH=${VERSION_PARTS[2]}
 
-        echo "Base Version: $BASE_VERSION"
         echo "PATCH: $PATCH"
 
         if [[ $VERSION == *"-SNAPSHOT" ]]; then
-            VERSION = 1.0.0
-          fi
-        NEW_PATCH=$((PATCH + 1))
+            BASE_VERSION="1.0.0"
+            NEW_PATCH=$((PATCH + 1))
+            NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+        else
+            BASE_VERSION="${VERSION}"
+            NEW_VERSION="${VERSION}"
+        fi
+
         echo "New Patch Version: $NEW_PATCH"
-        NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+        echo "New Version: $NEW_VERSION"
         mvn versions:set -DnewVersion=${NEW_VERSION}
         IVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         echo "Updated Version: $IVERSION"
@@ -59,10 +62,20 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Build Docker Image
-      run: docker build -t myapp .
-    - name: Run Docker Container
-      run: docker run -d -p 8080:8080 myapp:${NEW_VERSION}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-#     # - name: Update dependency graph
-#     #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+
+# - name: Update dependency graph
+#   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
