--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,8 +56,8 @@ jobs:
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add pom.xml
-        git commit -m "Update version to $NEW_VERSION"
-        git push origin master
+        git commit -m 'Increment patch version' || echo "No changes to commit"
+        git push
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
