--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,6 +76,20 @@ jobs:
       with:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+    - name: SSH to vm 
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+          HOST: ${{ secrets.SSH_HOST }}
+          USER: ${{ secrets.SSH_NAME }}
+      run: |
+        sudo docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
+        sudo docker pull hamster01/clockbox:latest
+        sudo docker run hamster01/clockbox:latest
+     
+      
+    
+    
+    
 
 # - name: Update dependency graph
 #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
