--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -84,9 +84,18 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       run: |
-        sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
-        sudo docker pull hamster01/clockbox:latest
-        sudo docker run hamster01/clockbox:latest
+        echo "$SSH_PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+        ssh -i private_key.pem -o StrictHostKeyChecking=no $HOST@$USER <<EOF
+          echo "Connected to VM"
+          sudo docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
+          sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
+          sudo docker run $DOCKERHUB_USERNAME/clockbox:latest
+        EOF
+      
+      #   sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
+      #   sudo docker pull hamster01/clockbox:latest
+      #   sudo docker run hamster01/clockbox:latest
      
       
     
