--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,31 +76,23 @@ jobs:
       with:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
-    - name: SSH to vm 
+
+    - name: SSH to VM
       env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          HOST: ${{ secrets.SSH_HOST }}
-          USER: ${{ secrets.SSH_NAME }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        HOST: ${{ secrets.SSH_HOST }}
+        USER: ${{ secrets.SSH_NAME }}
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no $HOST@$USER <<EOF
+        ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST <<EOF
           echo "Connected to VM"
           sudo docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
           sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
           sudo docker run $DOCKERHUB_USERNAME/clockbox:latest
         EOF
-      
-      #   sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
-      #   sudo docker pull hamster01/clockbox:latest
-      #   sudo docker run hamster01/clockbox:latest
-     
-      
-    
-    
-    
 
 # - name: Update dependency graph
 #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
