--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -87,7 +87,7 @@ jobs:
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST <<EOF
+        ssh -i private_key.pem -o StrictHostKeyChecking=no $HOST@$USER <<EOF
           echo "Connected to VM"
           sudo docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
           sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
