--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
@@ -77,7 +74,7 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
 
-    - name: SSH to VM
+    - name: SSH to VM and Run Docker Commands
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
         HOST: ${{ secrets.SSH_HOST }}
@@ -87,12 +84,10 @@ jobs:
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no $HOST@$USER <<EOF
+
+        ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
           echo "Connected to VM"
-          sudo docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
+          sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
           sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
           sudo docker run $DOCKERHUB_USERNAME/clockbox:latest
         EOF
-
-# - name: Update dependency graph
-#   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
