--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,9 +73,7 @@ jobs:
     #   with:
     #     push: true
     #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
-    - name: Debug SSH Host
-      run: echo "SSH Host: ${{ secrets.SSH_HOST }}"
-
+      
     - name: SSH to VM and Run Docker Commands
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
@@ -84,7 +82,7 @@ jobs:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       run: |
-        
+        echo "SSH Host: ${{ secrets.SSH_HOST }}"
         echo "$SSH_PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
 
