--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,11 +47,11 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
   scan_docker_image:
-          permissions:
+          # permissions:
 
-            id-token: read
-            contents: read
-            packages: read
+            # id-token: read
+            # contents: read
+            # packages: read
           runs-on: ubuntu-latest
           needs: [ build_name ]
           steps:
