--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,15 +20,15 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: 'Checkout Repository'
-      uses: actions/checkout@v4
-    - name: Dependency Review
-      uses: actions/dependency-review-action@v2
-      with:
-        fail-on-severity: critical
-        allow-licenses: MIT, Apache-2.0, ISC, BSD-2-Clause, 0BSD, NOASSERTION
-        base-ref: ${{ github.event.pull_request.base.sha || 'master' }}
-        head-ref: ${{ github.event.pull_request.head.sha || github.ref }}
+    # - name: 'Checkout Repository'
+    #   uses: actions/checkout@v4
+    # - name: Dependency Review
+    #   uses: actions/dependency-review-action@v2
+    #   with:
+    #     fail-on-severity: critical
+    #     allow-licenses: MIT, Apache-2.0, ISC, BSD-2-Clause, 0BSD, NOASSERTION
+    #     base-ref: ${{ github.event.pull_request.base.sha || 'master' }}
+    #     head-ref: ${{ github.event.pull_request.head.sha || github.ref }}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
